<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brouser">Brouser</string>
    <string name="materialYou">MaterialYou</string>
    <string name="camera">Camera</string>
    <string name="microphone">Micro</string>
    <string name="sensor">Sensor</string>
    <string name="profile">Profile</string>
    <string name="createFile">CreateFile</string>
    <string name="weather">Weather</string>
</resources>