<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/ic_menu_brouser"
            android:title="@string/brouser" />
        <item
            android:id="@+id/nav_materialYou"
            android:icon="@drawable/ic_menu_material_you"
            android:title="@string/materialYou" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_screen_camera"
            android:title="@string/camera"/>
        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/ic_menu_mic"
            android:title="@string/microphone" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_menu_sensors"
            android:title="@string/sensor" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_face"
            android:title="@string/profile" />

    </group>
</menu>